[master] lab05 finished

--- a/lab05/views/index.pug
+++ b/lab05/views/index.pug
@@ -31,6 +31,10 @@ html(lang="en")
           select#select_toAirports(name="toAirports")
             //- +addAirportList(toAirports)
             +addAirportList([])
+
+        button#listFlights List flights
+
+      #flightList
     else
       p Failed to query flight data!
 
